# blueteam-log-analyzer

./: .gitignore  BLA_OPTIMIZATION_PLAN.md  LICENSE  MANIFEST.in  README.md  bla.cmd  bla_cli.py  install.bat  install.sh  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: release-checklist.md
.github/workflows/: publish.yml  test.yml
bla/: __init__.py  __version__.py  allowlist.py  config.py  incident_brief.py  ioc.py  log_sources.py  models.py
bla/cli/: __init__.py  main.py
bla/core/: __init__.py  pipeline.py
bla/detection/: __init__.py  correlation.py  engine.py  enrichment.py  evidence.py  registry.py  scanners.py
bla/output/: __init__.py  brief_report.py  bundle.py  csv_report.py  evidence_report.py  geo_map.py  html_report.py  ioc_report.py  json_report.py  manifest.py  sarif_report.py  terminal.py
bla/parsers/: __init__.py  edr_xlsx.py  linux_auth.py  p0_security.py  registry.py  shell_history.py  stats.py  unified.py  web_access.py  windows_evtx.py  windows_json.py
bla/remote/: __init__.py  ssh_workspace.py
bla/rules/: __init__.py  loader.py  web_attacks.yaml
bla/utils/: helpers.py
docs/: allowlist-example.json  architecture.md  demo-cases.md  detection-quality.md  incident-brief.md  real-data-validation-report.md  release-checklist.md  secrepo-demo.md  secrepo-sample-validation.md  testing-resources.md
docs/marketing/: v1.2.0-launch-kit.md
docs/releases/: v1.1.0.md  v1.2.0.md  v1.2.1.md  v1.2.2.md  v1.3.0.md  v1.3.1.md  v1.3.2.md  v1.3.3.md  v1.3.4.md  v1.3.5.md  v1.3.6.md  v1.3.7.md  v1.3.8.md  v1.4.0.md  v1.4.1.md  v1.4.2.md  v1.4.3.md  v1.4.4.md
sample_logs/: aaa.evtx  windows_4688_sample.xml  windows_rdp_sample.xml  安全.evtx
scripts/: eval_detection.py  release_check.py
tests/: _support.py  test_allowlist.py  test_attack_chain.py  test_detection.py  test_detection_quality.py  test_log_sources.py  test_outputs.py  test_p0_security.py  test_parsers.py  test_regressions.py  test_release_hygiene.py  test_remote_workspace.py  test_rules.py  test_scanners.py
tests/fixtures/attack_chain/: unified_chain.jsonl
tests/fixtures/detection_quality/: cases.jsonl  manifest.example.jsonl
tests/fixtures/p0/: benign_noise.jsonl  golden_hvv_chain.json  hvv_chain.jsonl
