[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blueteam-log-analyzer"
dynamic = ["version"]
description = "BlueTeam Log Analyzer - 蓝队应急响应日志分析工具"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Hackerchen716" }]
keywords = ["blueteam", "incident-response", "log-analysis", "security", "SIEM", "DFIR", "threat-detection", "remote-collection", "ssh"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: System :: Logging",
  "Topic :: System :: Monitoring",
]

[project.optional-dependencies]
evtx = ["python-evtx>=0.7.4"]
remote = []
full = [
  "python-evtx>=0.7.4",
  "PyYAML>=6.0.1",
  "rich>=13.7.0",
  "orjson>=3.9.15",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.8",
  "build>=1.0",
]

[project.scripts]
bla = "bla_cli:main"

[tool.setuptools]
py-modules = ["bla_cli"]

[tool.setuptools.packages.find]
include = ["bla*"]

[tool.setuptools.package-data]
"bla.rules" = ["*.yaml", "*.yml"]
"bla.output" = ["assets/*.png", "assets/*.geojson"]

[tool.setuptools.dynamic]
version = {attr = "bla.__version__.__version__"}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["bla", "bla_cli"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 75

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false
